# openapi.json
@@ -397,6 +397,15 @@
                 }
               ]
             }
+          },
+          {
+            "name": "search",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "maxLength": 200,
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -521,6 +530,114 @@
           "Posts"
         ]
       }
+    },
+    "/groups/{groupId}/posts/{id}/view": {
+      "post": {
+        "operationId": "PostsController_recordView",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Posts"
+        ]
+      }
+    },
+    "/groups/{groupId}/rooms": {
+      "post": {
+        "operationId": "RoomsController_create",
+        "parameters": [
+          {
+            "name": "groupId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateRoomDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Rooms"
+        ]
+      },
+      "get": {
+        "operationId": "RoomsController_list",
+        "parameters": [
+          {
+            "name": "groupId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Rooms"
+        ]
+      }
+    },
+    "/groups/{groupId}/rooms/{roomId}/join": {
+      "post": {
+        "operationId": "RoomsController_join",
+        "parameters": [
+          {
+            "name": "groupId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "roomId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Rooms"
+        ]
+      }
     }
   },
   "info": {
@@ -590,6 +707,38 @@
           "posts"
         ]
       },
+      "PostView": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "postId": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "string"
+          },
+          "viewedAt": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "post": {
+            "$ref": "#/components/schemas/Post"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          }
+        },
+        "required": [
+          "id",
+          "postId",
+          "userId",
+          "viewedAt",
+          "post",
+          "user"
+        ]
+      },
       "Post": {
         "type": "object",
         "properties": {
@@ -608,6 +757,9 @@
           "body": {
             "type": "string"
           },
+          "viewCount": {
+            "type": "number"
+          },
           "createdAt": {
             "format": "date-time",
             "type": "string"
@@ -621,6 +773,12 @@
           },
           "author": {
             "$ref": "#/components/schemas/User"
+          },
+          "views": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PostView"
+            }
           }
         },
         "required": [
@@ -629,10 +787,12 @@
           "authorId",
           "title",
           "body",
+          "viewCount",
           "createdAt",
           "updatedAt",
           "group",
-          "author"
+          "author",
+          "views"
         ]
       },
       "User": {
@@ -669,6 +829,12 @@
             "items": {
               "$ref": "#/components/schemas/Post"
             }
+          },
+          "postViews": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PostView"
+            }
           }
         },
         "required": [
@@ -679,7 +845,8 @@
           "refreshTokenHash",
           "createdAt",
           "memberships",
-          "posts"
+          "posts",
+          "postViews"
         ]
       },
       "Membership": {
@@ -827,6 +994,15 @@
           "body": {
             "type": "string",
             "maxLength": 10000
+          }
+        }
+      },
+      "CreateRoomDto": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "maxLength": 120
           }
         }
       }
